# sparkling

./: .env.example  .gitignore  README.md  cli.py  dev.sh
apps/api/: alembic.ini  pyproject.toml  sps.db
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: _init.py  base.py  db.py  session.py
apps/api/app/models/: prompt.py
apps/api/app/routers/: criteria.py  evals.py  meta.py  prompts.py  runs.py
apps/api/app/schemas/: evals.py  prompts.py  runs.py
apps/api/app/services/: llm.py  outputs.py
apps/api/app/services/evals/: bleu.py  distinct.py  f1.py
apps/api/sparkling_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx
apps/web/src/components/: CriteriaPanel.tsx  PromptEditor.tsx  RunPanel.tsx
core/: config.py  llm.py  storage.py
data/: prompts.jsonl
data/logs/: llm.jsonl
prompts/: define.py  edit.py  eval.py
sparkling/apps/api/: pyproject.toml
tests/: test_define.py  test_edit.py  test_eval.py
