[project]
name = "sparkling-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "SQLAlchemy[asyncio]==2.0.34",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  "python-dotenv==1.0.1",
  "loguru==0.7.2",
  "httpx==0.27.2",
  "sacrebleu==2.4.3",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
